# muesli

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_STATUS.md  spec.md
docs/plans/: 2025-10-29-muesli-complete-implementation.md  2025-10-29-muesli-implementation-design.md  2025-11-05-muesli-implementation-design.md  2025-11-05-muesli-implementation.md
src/: api.rs  auth.rs  cli.rs  convert.rs  embeddings.rs  error.rs  index.rs  lib.rs  main.rs  mcp.rs  model.rs  storage.rs  summary.rs  sync.rs  util.rs
src/embeddings/: downloader.rs  engine.rs  vector.rs
src/index/: text.rs
src/snapshots/: muesli__convert__snapshot_tests__markdown_output_snapshot.snap
tests/: api_integration.rs  workflow_integration.rs
