[package]
name = "muesli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "muesli"
path = "src/main.rs"

[lib]
name = "muesli"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
slug = "0.1"
indicatif = "0.17"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
insta = "1.34"
assert_fs = "1.1"
tempfile = "3.8"

[features]
default = []
# Feature flags will be activated in later milestones
# index = ["tantivy"]
# embeddings-local = ["index", "ort", "tokenizers", "rayon", "hnsw_rs"]
# summaries = ["keyring"]
# full = ["index", "embeddings-local", "summaries"]

# Feature-gated dependencies (add later in M2-M4)
# tantivy = { version = "0.22", optional = true }
# ort = { version = "2.0", optional = true }
# tokenizers = { version = "0.15", optional = true }
# rayon = { version = "1.8", optional = true }
# hnsw_rs = { version = "0.3", optional = true }
# keyring = { version = "2.3", optional = true }
