[package]
name = "muesli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "muesli"
path = "src/main.rs"

[lib]
name = "muesli"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
slug = "0.1"
indicatif = "0.17"
rand = "0.8"

# Optional dependencies (feature-gated)
tantivy = { version = "0.22", optional = true }

[dev-dependencies]
wiremock = "0.6"
insta = "1.34"
assert_fs = "1.1"
tempfile = "3.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
index = ["dep:tantivy"]
# Additional features will be activated in later milestones
# embeddings-local = ["index", "dep:ort", "dep:tokenizers", "dep:rayon", "dep:hnsw_rs"]
# summaries = ["dep:keyring"]
# full = ["index", "embeddings-local", "summaries"]
